--- a/src/index.css
+++ b/src/index.css
@@ -127,17 +127,20 @@ button:hover {
   }
 }
 @media (max-width: 28em) {
-  .container {
-    padding: 0 24px;
-  }
+  /* body {
+    height: 100vh;
+    width: 100vw;
+  } */
+
   .App {
-    width: 1em;
+    width: 15em;
     height: 47em;
-    padding: 0 6px;
+    padding: 0 24px;
   }
 }
 @media (max-width: 20em) {
-  body {
-    min-width: 390px;
+  .cotainer {
+    width: 50em;
+    height: 100em;
   }
 }
