--- a/src/index.css
+++ b/src/index.css
@@ -127,9 +127,12 @@ button:hover {
   }
 }
 @media (max-width: 28em) {
+  .counter-header {
+    font-size: 2.5em;
+  }
   .App {
-    width: 15em;
-    height: 47em;
+    width: 18em;
+    height: 43em;
     padding: 0 24px;
   }
 }
