--- a/src/index.css
+++ b/src/index.css
@@ -127,6 +127,9 @@ button:hover {
   }
 }
 @media (max-width: 28em) {
+  .container {
+    margin-top: -12px;
+  }
   .counter-header {
     font-size: 2.5em;
   }
@@ -134,5 +137,6 @@ button:hover {
     width: 18em;
     height: 43em;
     padding: 0 24px;
+    gap: 2.5em;
   }
 }
