--- a/src/index.css
+++ b/src/index.css
@@ -133,13 +133,17 @@ button:hover {
   .counter-header {
     font-size: 2.5em;
   }
+  .counter-change {
+    margin-top: 12px;
+  }
   .App {
     width: 18em;
-    height: 50em;
-    padding: 100px 24px;
+    height: 100vh;
+    padding: 24px 24px;
+    margin-top: 16px;
     gap: 2.5em;
   }
   .heading {
-    margin-top: 12px;
+    margin-top: 42px;
   }
 }
