--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,12 @@
 
 a {
   font-weight: 500;
+  font-size: 20px;
   color: #333;
   text-decoration: inherit;
   display: inline-block;
 }
+
 .btn-link {
   color: #333;
   background-color: #fff;
@@ -27,6 +29,7 @@ a {
   padding: 8px;
   border-radius: 5px;
 }
+
 a:hover .btn-link {
   border: 0.5px solid #c7365f;
   background-color: rgba(255, 255, 255, 0.5);
